[package]
name = "bott"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.10"
exitcode = "1.1.2"
reqwest = { version = "0.11.22", features = ["json"] }
serde = {version = "1.0.193", features = ["derive"]}
tokio = { version = "1.34.0", features = ["full"] }
regex = "1.10.2"
spinners = "4.1.1"
