[package]
name = "bott"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.10"
exitcode = "1.1.2"
reqwest = { version = "0.11.22", features = ["json"] }
serde = {version = "1.0.193", features = ["derive"]}
tokio = { version = "1.34.0", features = ["full"] }
regex = "1.10.2"
spinners = "4.1.1"
dialoguer = "0.11.0"
confy = { version = "0.5.1", features = ["yaml_conf"], default-features = false }
serde_derive = "1.0.193"
keyring = "2.1.0"
users = "0.11.0"
directories = "5.0.1"
async-openai = "0.17.1"
serde_json = "1.0.108"
base64 = "0.21.5"
extism = "^1.0.0-rc3"
url = "2.5.0"

